<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TeamNaming">

    <TextView
        android:id="@+id/txtView_OmadaA_TeamNaming"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/omadaA"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_OmadaA_TeamNaming"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/writeHere"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtView_OmadaB_TeamNaming"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/omadaB"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_OmadaB_TeamNaming"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/writeHere"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_Start_TeamNaming"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/start" />

</LinearLayout>